fir url redirecting

--- a/services/web_dev/index.html
+++ b/services/web_dev/index.html
@@ -189,9 +189,9 @@
           <ul class="main-menu rest">
             <li>
               <div class="o-hidden">
-                <div class="link cursor-pointer dmenu">
+                <a href="../../index.html" class="link cursor-pointer dmenu">
                   <span class="fill-text" data-text="Home">Home</span>
-                </div>
+                </a>
               </div>
             </li>
 
@@ -316,7 +316,7 @@
               <div>
                 <nav class="navbar navbar-expand-lg">
                   <!-- Logo -->
-                  <a class="logo" href="#">
+                  <a class="logo" href="../../index.html">
                     <img
                       src="assets/imgs/wk.pages-logo-white.svg"
                       alt="logo"
@@ -375,138 +375,103 @@
               </div>
             </div>
             <div class="right-side">
-              <!-- ==================== Start Header ==================== -->
+              <div class="o-hidden">
+                <span class="sub-link"
+                  ><a
+                    href="https://www.wkpages.com/services/google_ads/index.html"
+                    >Google Ads</a
+                  ></span
+                >
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
-              <header class="header-ca pt-10">
-                <div class="container w-100 p-0">
-                  <div class="row sm-marg">
-                    <div class="col-lg-9">
-                      <div class="main-box">
-                        <div class="caption">
-                          <h1>Websites that Sell</h1>
-                        </div>
-                        <div class="text">
-                          <h6>
-                            We design and develop high-performance websites and
-                            eCommerce platforms<br />
-                            tailored to your business goals.
-                          </h6>
-                        </div>
-                        <div class="gl-rate d-flex align-items-center mt-60">
-                          <div class="icon">
-                            <img
-                              src="assets/imgs/header/logo-clutch.svg"
-                              alt="Clutch Logo"
-                            />
-                          </div>
-                          <div class="cont">
-                            <h6>
-                              4.9/5
-                              <span class="stars">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                              </span>
-                            </h6>
-                            <p>
-                              Trusted by startups and enterprises — see our
-                              reviews on <a href="#0">Clutch</a>
-                            </p>
-                          </div>
-                        </div>
-                      </div>
+    <main class="main-crev">
+      <div class="creative-bg">
+        <img src="assets/imgs/background/1.jpg" alt="" />
+      </div>
+
+      <!-- ==================== Start Header ==================== -->
+
+      <header class="header-ca">
+        <div class="nav-bar">
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-2">
+                <div class="logo-area">
+                  <a class="logo" href="../../index.html">
+                    <img
+                      src="assets/imgs/wk.pages-logo-white.svg"
+                      alt="logo"
+                    />
+                  </a>
+                </div>
+              </div>
+              <div class="col-lg-8">
+                <div class="nav-search">
+                  <ul class="navbar">
+                    <li>
+                      <a href="https://tally.so/r/nWKkvQ" class="nav-link"
+                        >Start a Project</a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        href="https://1drv.ms/b/c/f23709bddb7ed08a/EUBBw4xHDVBKjSRGXLBc38kBcefUa_8BneHpFWC65rF6tw?e=XUEnnH"
+                        class="nav-link"
+                        >Our Portfolio</a
+                      >
+                    </li>
+                    <li>
+                      <a href="../../inner_pages/about_us.html" class="nav-link"
+                        >About Us</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="col-lg-2">
+                <div class="menu-icon-area">
+                  <div class="menu-icon-flex d-flex align-items-center">
+                    <div class="lang-switcher">
+                      <span data-lang="en" class="active">en</span>
+                      <span class="separator">/</span>
+                      <span data-lang="pl">pl</span>
                     </div>
-                    <div class="col-lg-3 right-column">
-                      <div>
-                        <div class="serv">
-                          <h6>
-                            Warsaw-based. Working with brands worldwide.<br />
-                            We build digital experiences that look good and
-                            perform even better.
-                          </h6>
-                          <div class="content" data-tp-throwable-scene="true">
-                            <div class="item" data-tp-throwable-el="">
-                              <div><span>Landing Pages</span></div>
-                            </div>
-                            <div class="item" data-tp-throwable-el="">
-                              <div>
-                                <span class="bdark">eCommerce Stores</span>
-                              </div>
-                            </div>
-                            <div class="item" data-tp-throwable-el="">
-                              <div class="icon1">
-                                <img
-                                  src="assets/imgs/header/s-icon1.svg"
-                                  alt=""
-                                />
-                              </div>
-                            </div>
-                            <div class="item" data-tp-throwable-el="">
-                              <div>
-                                <span class="bred">Corporate Sites</span>
-                              </div>
-                            </div>
-                            <div class="item" data-tp-throwable-el="">
-                              <div>
-                                <span class="bred">SEO</span>
-                              </div>
-                            </div>
-                            <div class="item" data-tp-throwable-el="">
-                              <div><span>Web Apps</span></div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="awards mt-10">
-                        <div class="swiper awards-swiper swiper-container">
-                          <div class="swiper-wrapper">
-                            <div class="swiper-slide">
-                              <div class="item">
-                                <div class="img">
-                                  <img
-                                    src="assets/imgs/header/awards/2.svg"
-                                    alt="Award"
-                                  />
-                                </div>
-                                <span>
-                                  Top eCommerce <br />
-                                  Agency 2023
-                                </span>
-                              </div>
-                            </div>
-                            <div class="swiper-slide">
-                              <div class="item">
-                                <div class="img">
-                                  <img
-                                    src="assets/imgs/header/awards/3.svg"
-                                    alt="Award"
-                                  />
-                                </div>
-                                <span>
-                                  95% Success Rate <br />
-                                  on Upwork
-                                </span>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="controls">
-                            <div class="swiper-button-next">
-                              <i class="fa-solid fa-chevron-left"></i>
-                            </div>
-                            <div class="swiper-button-prev">
-                              <i class="fa-solid fa-chevron-right"></i>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
+                    <div class="menu-icon cursor-pointer">
+                      <span class="icon ti-align-right"></span>
                     </div>
                   </div>
                 </div>
-              </header>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-12">
+              <div class="caption-gq">
+                <h1>
+                  <span
+                    >We Create <br />
+                    Websites</span
+                  >
+                  that drive results
+                </h1>
+              </div>
+            </div>
+          </div>
+        </div>
+      </header>
 
-              <!-- ==================== End Header ==================== -->
+      <!-- ==================== End Header ==================== -->
+
+      <!-- ==================== Start intro ==================== -->
+
+      <section class="intro-ca section-padding">
 
               <!-- ==================== Start Portfolio ==================== -->
 
