--- a/services/designs/index.html
+++ b/services/designs/index.html
@@ -175,7 +175,7 @@
     >
       <div class="container">
         <!-- Logo -->
-        <a class="logo" href="#" style="border: none">
+        <a class="logo" href="../../index.html" style="border: none">
           <img
             src="assets/imgs/wk.pages-logo-white.svg"
             alt="wk.pages - Digital Agency Logo"
@@ -187,7 +187,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" href="#">Home</a>
+              <a class="nav-link active" href="../../index.html">Home</a>
             </li>
             <li class="nav-item">
               <a
@@ -243,9 +243,13 @@
           <ul class="main-menu rest">
             <li>
               <div class="o-hidden">
-                <div class="link cursor-pointer dmenu">
-                  <span class="fill-text" data-text="Home">Home</span>
-                </div>
+                <a
+                  href="../../index.html"
+                  class="link cursor-pointer dmenu"
+                  ><span class="fill-text" data-text="Home"
+                    >Home</span
+                  ></a
+                >
               </div>
             </li>
 
@@ -324,15 +328,6 @@
 
             <li>
               <div class="o-hidden">
-                <a href="https://tally.so/r/nWKkvQ" class="link"
-                  ><span class="fill-text" data-text="Contact Us"
-                    >Contact Us</span
-                  ></a
-                >
-              </div>
-            </li>
-            <li>
-              <div class="o-hidden">
                 <a href="../../inner_pages/about_us.html" class="link">
                   <span class="fill-text" data-text="About Us">About Us</span>
                 </a>
@@ -344,7 +339,7 @@
           <div class="text-center full-width">
             <div class="logo">
               <img
-                src="assets/imgs/wk.pages-logo-white.svg"
+                src="../../assets/imgs/wk.pages-logo-white.svg"
                 alt="wk.pages - Digital Agency Logo"
                 style="width: 75px"
               />
