--- a/services/email_marketing/index.html
+++ b/services/email_marketing/index.html
@@ -172,7 +172,7 @@
     >
       <div class="container">
         <!-- Logo -->
-        <a class="logo" href="#" style="border: none">
+        <a class="logo" href="../../index.html" style="border: none">
           <img
             src="assets/imgs/wk.pages-logo-white.svg"
             alt="wk.pages - Digital Agency Logo"
@@ -184,7 +184,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" href="#">Home</a>
+              <a class="nav-link active" href="../../index.html">Home</a>
             </li>
             <li class="nav-item">
               <a
@@ -240,9 +240,13 @@
           <ul class="main-menu rest">
             <li>
               <div class="o-hidden">
-                <div class="link cursor-pointer dmenu">
-                  <span class="fill-text" data-text="Home">Home</span>
-                </div>
+                <a
+                  href="../../index.html"
+                  class="link cursor-pointer dmenu"
+                  ><span class="fill-text" data-text="Home"
+                    >Home</span
+                  ></a
+                >
               </div>
             </li>
 
@@ -332,7 +336,7 @@
           <div class="text-center full-width">
             <div class="logo">
               <img
-                src="assets/imgs/wk.pages-logo-white.svg"
+                src="../../assets/imgs/wk.pages-logo-white.svg"
                 alt="wk.pages - Digital Agency Logo"
                 style="width: 75px"
               />
