--- a/services/meta_ads/index.html
+++ b/services/meta_ads/index.html
@@ -218,7 +218,7 @@
     >
       <div class="container">
         <!-- Logo -->
-        <a class="logo" href="https://www.wkpages.com/" style="border: none">
+        <a class="logo" href="../../index.html" style="border: none">
           <img
             src="assets/imgs/wk.pages-logo-white.svg"
             alt="wk.pages - Digital Agency Logo"
@@ -230,7 +230,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" href="https://www.wkpages.com/">Home</a>
+              <a class="nav-link active" href="../../index.html">Home</a>
             </li>
             <li class="nav-item">
               <a
@@ -287,9 +287,9 @@
             <li>
               <div class="o-hidden">
                 <a
-                  href="https://www.wkpages.com/"
+                  href="../../index.html"
                   class="link cursor-pointer dmenu"
-                  ><span class="fill-text" data-text="Portfolio"
+                  ><span class="fill-text" data-text="Home"
                     >Home</span
                   ></a
                 >
@@ -382,7 +382,7 @@
           <div class="text-center full-width">
             <div class="logo">
               <img
-                src="assets/imgs/wk.pages-logo-white.svg"
+                src="../../assets/imgs/wk.pages-logo-white.svg"
                 alt="wk.pages - Digital Agency Logo"
                 style="width: 75px"
               />
