--- a/services/seo/index.html
+++ b/services/seo/index.html
@@ -336,7 +336,7 @@
     >
       <div class="container">
         <!-- Logo -->
-        <a class="logo" href="https://www.wkpages.com/" style="border: none">
+        <a class="logo" href="../../index.html" style="border: none">
           <img
             src="../../assets/imgs/wk.pages-logo-white.svg"
             alt="wk.pages - Digital Agency Logo"
@@ -348,7 +348,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" href="https://www.wkpages.com/"
+              <a class="nav-link active" href="../../index.html"
                 >Home</a
               >
             </li>
@@ -412,9 +412,9 @@
             <li>
               <div class="o-hidden">
                 <a
-                  href="https://www.wkpages.com/"
+                  href="../../index.html"
                   class="link cursor-pointer dmenu"
-                  ><span class="fill-text" data-text="Portfolio"
+                  ><span class="fill-text" data-text="Home"
                     >Home</span
                   ></a
                 >
