added our cases to index file and ui/ux

--- a/index.html
+++ b/index.html
@@ -686,68 +686,68 @@
                 <div class="work-box">
                   <div class="swiper work-swiper swiper-container">
                     <div class="swiper-wrapper">
-                      <div class="swiper-slide">
+                      <div class="swiper-slide" style="max-width: 600px;">
                         <div class="item">
                           <div class="img">
                             <img
-                              src="assets/imgs/works/1.jpg"
+                              src="assets/imgs/works/Doughry threads-26.png"
                               alt="wk.pages - Professional Website Design Portfolio - Custom UI/UX Development"
                               loading="lazy"
                             />
                           </div>
                           <div class="cont">
-                            <h4><a href="#0">Our portfolio</a></h4>
+                            <h4><a href="#0">Pasty shop Doughry</a></h4>
                             <span class="sub-color"
                               >Prototype Design, Webflow</span
                             >
                           </div>
                         </div>
                       </div>
-                      <div class="swiper-slide">
+                      <div class="swiper-slide" style="max-width: 600px;">
                         <div class="item">
                           <div class="img">
                             <img
-                              src="assets/imgs/works/2.jpg"
+                              src="assets/imgs/works/Logo wer 2_compressed-02.jpg"
                               alt="wk.pages - Web Development Portfolio Example"
                               loading="lazy"
                             />
                           </div>
                           <div class="cont">
-                            <h4><a href="#0">Our portfolio</a></h4>
+                            <h4><a href="#0">Beauty studio</a></h4>
                             <span class="sub-color"
                               >Web Design & Development</span
                             >
                           </div>
                         </div>
                       </div>
-                      <div class="swiper-slide">
+                      <div class="swiper-slide" style="max-width: 600px;">
                         <div class="item">
                           <div class="img">
                             <img
-                              src="assets/imgs/works/3.jpg"
+                              src="assets/imgs/works/fb-post-recordy-maraton.jpg"
                               alt="wk.pages - UI/UX Design Portfolio Showcase"
                               loading="lazy"
                             />
                           </div>
                           <div class="cont">
-                            <h4><a href="#0">Our portfolio</a></h4>
+                            <h4><a href="#0">Silesia marathon</a></h4>
                             <span class="sub-color"
                               >Prototype Design, Webflow</span
                             >
                           </div>
                         </div>
                       </div>
-                      <div class="swiper-slide">
+                      <div class="swiper-slide" style="max-width: 600px;">
                         <div class="item">
                           <div class="img">
                             <img
-                              src="assets/imgs/works/4.jpg"
+                              src="assets/imgs/works/Instagram post - 11.png"
                               alt="wk.pages - Digital Marketing Project Example"
                               loading="lazy"
                             />
                           </div>
                           <div class="cont">
-                            <h4><a href="#0">Our portfolio</a></h4>
+                            <h4><a href="#0">MKS Sandecja</a></h4>
                             <span class="sub-color"
                               >Prototype Design, Webflow</span
                             >
