--- a/services/designs/index.html
+++ b/services/designs/index.html
@@ -561,86 +561,66 @@
                 <div class="row justify-content-center">
                   <div class="col-lg-6 col-md-10 text-center">
                     <p>
-                      Business challenges are tough, but we have a proven record
-                      of elevating our partners to their next and best selves.
+                      Where croissants meet cool — our bakery rebrand
                     </p>
-                    <h2 class="text-u mt-10">Featured Projects</h2>
+                    <h2 class="text-u mt-10">Case with Bakery</h2>
                   </div>
                 </div>
               </div>
               <div class="row lg-marg">
-                <div class="col-lg-12">
+                <div class="col-lg-6">
                   <div class="item mt-60">
                     <div class="img fit-img">
-                      <img src="assets/imgs/works/1.jpg" alt="UI/UX Design Portfolio Example 1" />
+                      <img src="assets/imgs/works/Doughry threads-26.png" alt="UI/UX Design Portfolio Example 2" />
                       <a
                         href="../inner_pages/portfolio-standard.html"
                         class="plink"
                       ></a>
                     </div>
                     <div class="cont d-flex mt-30">
-                      <h6>Archin Website Design</h6>
-                      <span class="ml-auto sub-color fz-14">2023</span>
+                      <span class="ml-auto sub-color fz-14">Print materials</span>
                     </div>
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div class="item mt-60">
                     <div class="img fit-img">
-                      <img src="assets/imgs/works/2.jpg" alt="UI/UX Design Portfolio Example 2" />
+                      <img src="assets/imgs/works/Doughry threads-19.png" alt="UI/UX Design Portfolio Example 3" />
                       <a
                         href="../inner_pages/portfolio-standard.html"
                         class="plink"
                       ></a>
                     </div>
                     <div class="cont d-flex mt-30">
-                      <h6>Archin Website Design</h6>
-                      <span class="ml-auto sub-color fz-14">2023</span>
+                      <span class="ml-auto sub-color fz-14">Visual storytelling</span>
                     </div>
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div class="item mt-60">
                     <div class="img fit-img">
-                      <img src="assets/imgs/works/3.jpg" alt="UI/UX Design Portfolio Example 3" />
+                      <img src="assets/imgs/works/Doughry threads-22.png" alt="UI/UX Design Portfolio Example 4" />
                       <a
                         href="../inner_pages/portfolio-standard.html"
                         class="plink"
                       ></a>
                     </div>
                     <div class="cont d-flex mt-30">
-                      <h6>Archin Website Design</h6>
-                      <span class="ml-auto sub-color fz-14">2023</span>
+                      <span class="ml-auto sub-color fz-14">Brand identity</span>
                     </div>
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div class="item mt-60">
                     <div class="img fit-img">
-                      <img src="assets/imgs/works/4.jpg" alt="UI/UX Design Portfolio Example 4" />
+                      <img src="assets/imgs/works/Doughry threads-21.png" alt="UI/UX Design Portfolio Example 5" />
                       <a
                         href="../inner_pages/portfolio-standard.html"
                         class="plink"
                       ></a>
                     </div>
                     <div class="cont d-flex mt-30">
-                      <h6>Archin Website Design</h6>
-                      <span class="ml-auto sub-color fz-14">2023</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-6">
-                  <div class="item mt-60">
-                    <div class="img fit-img">
-                      <img src="assets/imgs/works/5.jpg" alt="UI/UX Design Portfolio Example 5" />
-                      <a
-                        href="../inner_pages/portfolio-standard.html"
-                        class="plink"
-                      ></a>
-                    </div>
-                    <div class="cont d-flex mt-30">
-                      <h6>Archin Website Design</h6>
-                      <span class="ml-auto sub-color fz-14">2023</span>
+                      <span class="ml-auto sub-color fz-14">Packaging design</span>
                     </div>
                   </div>
                 </div>
