google ads reports images

--- a/services/google_ads/index.html
+++ b/services/google_ads/index.html
@@ -662,8 +662,7 @@
                       <h6>Basic Plan</h6>
                       <h2 class="yearly_price"><span>from </span> $600</h2>
                       <p>
-                        Ideal for businesses just getting started with Google
-                        Ads.
+                        For new businesses starting with Google Ads
                       </p>
                     </div>
 
@@ -673,7 +672,7 @@
                       <h2 class="yearly_price color-blue5">
                         <span>from </span> $900
                       </h2>
-                      <p>Performance-focused campaign setup & optimization.</p>
+                      <p>Campaign setup & performance optimization</p>
                     </div>
 
                     <!-- Package 3 -->
@@ -681,8 +680,7 @@
                       <h6>Advanced Plan</h6>
                       <h2 class="yearly_price"><span>from </span> $1200</h2>
                       <p>
-                        Full-stack advertising including eCommerce &
-                        remarketing.
+                        Full-stack ads: eCommerce & remarketing
                       </p>
                       <div class="label">
                         <img
@@ -917,35 +915,41 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-7">
                         <div class="content">
-                            <h3>We combine our passion</h3>
+                            <h3>We combine our passion with Google Ads expertise</h3>
                             <div class="text mt-30 mb-30">
-                                <p>Duis sed augue condimentum, blandit sapien in, accumsan eros. Curabitur sodales pulvinar libero et venenatis. Nullam eleifend risus a quam dictum auctor. Mauris at leo non dui euismod varius. Cras vel erat at est aliquam laoreet. Donec tincidunt, nunc eu gravida malesuada, tellus leo.</p>
+                                <p>At wk.pages, we launch and manage full-funnel Google Ads campaigns that actually deliver — not just traffic, but measurable business results. Need leads? We build high-intent Search campaigns that show your offer exactly when customers are searching. Want brand awareness? We run Display ads on relevant websites and apps.</p>
                             </div>
                             <div class="text">
-                                <p>Maecenas sed tortor molestie, sagittis nibh sit amet, dapibus felis. Vivamus sed neque iaculis, ultrices nulla eu, venenatis dui. Praesent luctus urna eu dapibus pulvinar. Curabitur sed magna accumsan neque fermentum laoreet. Ut nunc.</p>
+                                <p>Running an e-commerce store? We handle Shopping ads with optimized product feeds, custom labels, and dynamic bidding — so your products show up with image, price, and link in real time. For deeper engagement, we launch YouTube campaigns based on behavior, interests, or custom intent, building trust through smart storytelling.</p>
                             </div>
+                            <div class="text">
+                              <p>And for users who didn’t convert the first time? We re-engage them with remarketing ads tailored to what they viewed. Everything we do — from ad copy to keyword strategy to targeting — is built to lower your cost per lead and increase your returns.</p>
+                          </div>
                         </div>
                     </div>
                 </div>
                 <div class="row mt-80">
                     <div class="col-md-6">
                         <div class="img sm-mb30">
-                            <img src="./assets/imgs/services/img1.jpg" alt="Google Ads Service Example 1" />
+                            <img src="./assets/imgs/Simplify_cross_channel_ad_reporting_d70c5ac4ef.webp" alt="Google Ads Service Example 1" />
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="img">
-                            <img src="./assets/imgs/services/img2.jpg" alt="Google Ads Service Example 2" />
+                            <img src="./assets/imgs/Google_Ads_Reporting_Tool_Hero_d2c8d9fd0e.webp" alt="Google Ads Service Example 2" />
                         </div>
                     </div>
                 </div>
                 <div class="row justify-content-center mt-80">
                     <div class="col-lg-7">
                         <div class="content">
-                            <h3>Product making for friendly users</h3>
-                            <div class="text mt-30 mb-50">
-                                <p>Duis sed augue condimentum, blandit sapien in, accumsan eros. Curabitur sodales pulvinar libero et venenatis. Nullam eleifend risus a quam dictum auctor. Mauris at leo non dui euismod varius. Cras vel erat at est aliquam laoreet. Donec tincidunt, nunc eu gravida malesuada, tellus leo.</p>
+                            <h3>Google Ads reporting that drives decisions</h3>
+                            <div class="text mt-30 mb-30">
+                                <p>Our reporting doesn’t just show numbers — it shows what to do next. You’ll get a real-time Looker Studio dashboard, full GA4 integration, and weekly updates focused on ROI, CPA, and what’s scaling.</p>
                             </div>
+                            <div class="text">
+                              <p>We track every step of the funnel — from click to conversion — and break it down in clear, human language. Want to know what keywords brought the most sales? Where your budget works best? What audience to double down on? It’s all there, live. No guessing, no delays — just action-ready insights.</p>
+                          </div>
                         </div>
                     </div>
                 </div>
