meta ads images block added

--- a/services/google_ads/index.html
+++ b/services/google_ads/index.html
@@ -922,9 +922,6 @@
                             <div class="text">
                                 <p>Running an e-commerce store? We handle Shopping ads with optimized product feeds, custom labels, and dynamic bidding — so your products show up with image, price, and link in real time. For deeper engagement, we launch YouTube campaigns based on behavior, interests, or custom intent, building trust through smart storytelling.</p>
                             </div>
-                            <div class="text">
-                              <p>And for users who didn’t convert the first time? We re-engage them with remarketing ads tailored to what they viewed. Everything we do — from ad copy to keyword strategy to targeting — is built to lower your cost per lead and increase your returns.</p>
-                          </div>
                         </div>
                     </div>
                 </div>
@@ -936,7 +933,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="img">
-                            <img src="./assets/imgs/Google_Ads_Reporting_Tool_Hero_d2c8d9fd0e.webp" alt="Google Ads Service Example 2" />
+                            <img src="./assets/imgs/Facebook_Ads_Report_template_connect_accounts_700546fcbf.svg" alt="Faceboo Ads Service Example 2" />
                         </div>
                     </div>
                 </div>
