--- a/services/meta_ads/index.html
+++ b/services/meta_ads/index.html
@@ -1061,6 +1061,50 @@
             </div>
           </section>
 
+          <section class="serv-details section-padding">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-7">
+                        <div class="content">
+                            <h3>We build Facebook Ads that feel personal and perform like crazy</h3>
+                            <div class="text mt-30 mb-30">
+                                <p>Facebook isn’t search — it’s storytelling. People aren’t typing in what they want — you have to catch their attention. That’s why we craft thumb-stopping ads designed to blend in and stand out at the same time. We test headlines, visuals, audiences, and formats like carousels, Reels, and instant forms — until we find the winning combo that converts.</p>
+                            </div>
+                            <div class="text">
+                                <p>Whether you’re looking for leads, online sales, or just want your brand to stay top-of-mind, our campaigns are built to turn casual scrollers into actual customers — without wasting your budget.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row mt-80">
+                    <div class="col-md-6">
+                        <div class="img sm-mb30">
+                            <img src="./assets/imgs/Customizable_Facebook_Ads_report_3dad6a5ba8.webp" alt="Facebook Ads Service Example 1" />
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="img">
+                            <img src="./assets/imgs/67997b93a3b3c1549af6b74e_45336.svg" alt="Facebook Ads Service Example 2" />
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center mt-80">
+                    <div class="col-lg-7">
+                        <div class="content">
+                            <h3>Analytics that speak human, not Meta-speak</h3>
+                            <div class="text mt-30 mb-30">
+                                <p>Our reporting is built for clarity, not confusion. You’ll see what creatives perform, what audiences convert, and how much it costs to get a result. Every week, we send updates you can actually understand — with real insight, not just numbers.</p>
+                            </div>
+                            <div class="text">
+                              <p>From pixel events to ad-level breakdowns, you’ll know exactly what’s happening with your money. And most importantly — what to scale next.</p>
+                          </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
           <!-- ==================== End marquee ==================== -->
 
           <!-- ==================== Start Portfolio ==================== -->
