seo images block added

--- a/services/seo/index.html
+++ b/services/seo/index.html
@@ -348,9 +348,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" href="../../index.html"
-                >Home</a
-              >
+              <a class="nav-link active" href="../../index.html">Home</a>
             </li>
             <li class="nav-item">
               <a
@@ -411,12 +409,8 @@
           <ul class="main-menu rest">
             <li>
               <div class="o-hidden">
-                <a
-                  href="../../index.html"
-                  class="link cursor-pointer dmenu"
-                  ><span class="fill-text" data-text="Home"
-                    >Home</span
-                  ></a
+                <a href="../../index.html" class="link cursor-pointer dmenu"
+                  ><span class="fill-text" data-text="Home">Home</span></a
                 >
               </div>
             </li>
@@ -1174,6 +1168,63 @@
           </section>
 
           <!-- ==================== End FAQS ==================== -->
+
+          <section class="serv-details section-padding">
+            <div class="container">
+              <div class="row justify-content-center">
+                <div class="col-lg-7">
+                  <div class="content">
+                    <h3>We grow your traffic with real SEO, not magic tricks</h3>
+                    <div class="text mt-30 mb-30">
+                      <p>
+                        SEO isn’t a checkbox. It’s a long game — but when done right, it becomes your most profitable traffic source. At wk.pages, we don’t chase vanity metrics. We focus on growing your organic visibility, building relevant pages, fixing what’s broken, and outranking your competitors step by step.
+                      </p>
+                    </div>
+                    <div class="text">
+                      <p>
+                        We work with e-commerce, service websites, and corporate portals. Whether you’re starting from scratch or scaling existing traffic, we adapt strategy to your niche, audience, and goals. From technical audits to content planning, link building, and semantic core clustering — we handle it all in-house.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row mt-80">
+                <div class="col-md-6">
+                  <div class="img sm-mb30">
+                    <img
+                      src="./imgs/Monitor_all_SEO_KP_Is_in_one_place_8db8948703.webp"
+                      alt="Google Ads Service Example 1"
+                    />
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="img">
+                    <img
+                      src="./imgs/rankings-report-looker-studio.png"
+                      alt="Faceboo Ads Service Example 2"
+                    />
+                  </div>
+                </div>
+              </div>
+              <div class="row justify-content-center mt-80">
+                <div class="col-lg-7">
+                  <div class="content">
+                    <h3>SEO results backed by strategy, not guesswork</h3>
+                    <div class="text mt-30 mb-30">
+                      <p>
+                        Every action we take is based on data, not assumptions. We start with a full audit: structure, tags, speed, link profile, and content relevance. Then we build a roadmap — with priorities, deadlines, and monthly KPIs you can track.
+                      </p>
+                    </div>
+                    <div class="text">
+                      <p>
+                        We don’t just “do SEO” — we show you what’s working. From position tracking to traffic breakdowns and page-level reporting, you’ll see progress in language you understand. No smoke. No excuses. Just growth.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
 
           <!-- ==================== Start Blogs ==================== -->
 
